<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <io.legado.app.ui.widget.text.AccentTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/manga_display_settings"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/manga_scroll_direction"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/rg_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <io.legado.app.lib.theme.view.ThemeRadioButton
                android:id="@+id/rb_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/manga_direction_vertical" />

            <io.legado.app.lib.theme.view.ThemeRadioButton
                android:id="@+id/rb_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/manga_direction_horizontal" />

        </RadioGroup>

        <io.legado.app.lib.theme.view.ThemeCheckBox
            android:id="@+id/cb_snap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/disable_horizontal_page_snap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/image_gap"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/rg_gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <io.legado.app.lib.theme.view.ThemeRadioButton
                android:id="@+id/rb_gap_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/image_gap_none" />

            <io.legado.app.lib.theme.view.ThemeRadioButton
                android:id="@+id/rb_gap_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/image_gap_small" />

            <io.legado.app.lib.theme.view.ThemeRadioButton
                android:id="@+id/rb_gap_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/image_gap_medium" />

            <io.legado.app.lib.theme.view.ThemeRadioButton
                android:id="@+id/rb_gap_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/image_gap_large" />

        </RadioGroup>

        <io.legado.app.lib.theme.view.ThemeCheckBox
            android:id="@+id/cb_page_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/manga_page_anim" />

        <io.legado.app.lib.theme.view.ThemeCheckBox
            android:id="@+id/cb_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enable_manga_gray" />

        <io.legado.app.lib.theme.view.ThemeCheckBox
            android:id="@+id/cb_epaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manga_epaper" />

        <io.legado.app.ui.widget.DetailSeekBar
            android:id="@+id/dsb_epaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:max="255"
            app:title="@string/manga_epaper_value" />

        <io.legado.app.lib.theme.view.ThemeCheckBox
            android:id="@+id/cb_hide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hide_manga_title" />

        <io.legado.app.lib.theme.view.ThemeCheckBox
            android:id="@+id/cb_disable_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/disable_manga_scale" />

        <io.legado.app.lib.theme.view.ThemeCheckBox
            android:id="@+id/cb_disable_click_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/disable_manga_click_scroll" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
